--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         Welcome to my example page!</h1>
     <h2>Here is a website that I love:</h2>
     <a href="www.expedia.com">
-        <img src="expedia1.jpg" width="200px" height="150px"></a>
+        <img src="https://images.squarespace-cdn.com/content/v1/595d69672e69cf27605f00ba/1501099022190-WN229MUKDTRRLXW9P0H7/ke17ZwdGBToddI8pDm48kDF87mxRdNISNcPNSEPBNXIUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYxCRW4BPu10St3TBAUQYVKcEsXAzte1Z2UvGPeocPk_4e1lZjg3OtIttjCOz9B36t97ICbp3oylvUEhP5pwM94s/Air+Europa.png" width="200px" height="150px"></a>
     <h3>Some of my favorite things:</h3>
     <ul><li> Traveling</li>
         <li> Sleeping</li>
